--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-dropdown-picker": "^5.4.4",
+    "react-native-image-picker": "^4.10.3",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-snackbar": "^2.4.0",
     "react-native-svg": "^13.6.0",
     "react-native-vector-icons": "^9.2.0"
   },
