--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-screens": "^3.18.2",
     "react-native-snackbar": "^2.4.0",
     "react-native-svg": "^13.6.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "use-debounce": "^9.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
