--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.70.6",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-image-picker": "^4.10.3",
+    "react-native-localization": "^2.3.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-snackbar": "^2.4.0",
