--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-inline-import": "^3.0.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-date-picker": "^4.2.6",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-image-picker": "^4.10.3",
     "react-native-localization": "^2.3.1",
