--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest --coverage",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@notifee/react-native": "^7.3.0",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "axios": "^1.2.1",
     "babel-plugin-inline-import": "^3.0.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-date-picker": "^4.2.6",
@@ -31,16 +34,14 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
+    "@testing-library/react-native": "^11.5.0",
+    "babel-jest": "^29.3.1",
     "eslint": "^7.32.0",
-    "jest": "^26.6.3",
+    "jest": "^29.3.1",
     "metro-react-native-babel-preset": "0.72.3",
     "react-native-sass-transformer": "^2.0.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.1.0",
     "sass": "^1.57.1"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
