--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-config": "^1.4.11",
     "react-native-date-picker": "^4.2.6",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-image-picker": "^4.10.3",
